src/app/details/details.component.css
#heading {
  font-size: calc(2.2rem + 1vw);
  color: white;
  margin-top: 10rem;
  margin-bottom: 0;
  padding: 0 1rem 1rem 4rem;
  background: linear-gradient(to left, #35696200 0%, var(--rich-black) 100%);

  font-family: "Lugrasimo", cursive, serif;
  font-weight: 500;
}

.row {
  box-shadow: 0 0 25px 10px var(--rich-black);
  padding-right: 4rem;
  background-color: var(--rich-black);
}

.photo {
  max-width: 100%;
  height: auto;
  border: 3px solid var(--caribbean-current);
  border-radius: 25px;
}

.imgBox {
  position: relative;
  width: 45%;
  padding: 0;
}
#desc {
  /* box-shadow: -15px 0 2px 0 var(--rich-black); */
  background-color: var(--rich-black);
  padding: 0.5rem 1.5rem;

  p {
    font-size: calc(0.7em + 1vw);
    color: var(--light-gray);
    padding: 2rem 2rem 2rem 10rem;
    text-wrap: wrap;
  }
}
.btn {
  background-color: var(--flame);
  margin: 3rem 5rem;
  transition: all 0.3s ease-in-out;
}

.btn:hover {
  transform: scale(1.15);
  background-color: var(--rich-black);
}
#btnBg {
  width: 100vw;
  height: fit-content;
  background: linear-gradient(
    to right,
    #35696200 0%,
    var(--atomic-tangerine) 60%,
    var(--cinnabar) 100%
  );
}

